# sostrades-pre-commit

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff.toml  CHANGELOG.md  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  tox.ini
requirements/: doc.txt  test-python3.10.txt  test-python3.11.txt  test-python3.12.txt  test-python3.9.txt
src/header_hook/: __init__.py  update_headers.py
src/header_hook/headers/: __init__.py
src/header_updater_hook/: update_headers.py
src/sostrades_pre_commit/: __init__.py  update_headers.py
tests/: __init__.py  test_update_headers.py
tests/files/: __init__.py  airbus_header.py  cap_header.py  modified_header.py  modified_header_single_date.py  modified_header_two_dates.py  no_header.py
tests/files/expected/: __init__.py  airbus_header.py  modified_header.py  no_header.py
